# Cpp20_Modules

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  mymodule_interface_partition.cpp  mymodule_interface_unit.cpp  mymodule_partition.cpp  mymodule_unit.cpp  translation_unit.cpp
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yml
reveal.js/: index.html
reveal.js/img/: modules.plantuml
